<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>net.wirelabs</groupId>
    <artifactId>jmaps</artifactId>
    <version>1.4.3-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>jmaps-viewer</module>
        <module>jmaps-example</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <awaitility.version>4.2.0</awaitility.version>
        <mockito.version>4.1.0</mockito.version>
        <junit.version>5.8.2</junit.version>
        <assertj.version>3.23.1</assertj.version>
        <okhttp.version>4.12.0</okhttp.version>
    </properties>

    <scm>
        <developerConnection>scm:git:git@github.com:mikey75/jmaps.git</developerConnection>
        <connection>scm:git:git@github.com:mikey75/jmaps.git</connection>
        <url>git@github.com:mikey75/jmaps.git</url>
        <tag>HEAD</tag>
    </scm>

    <name>jMmaps</name>
    <description>Java Swing component to interact with online maps</description>
    <url>https://github.com/mikey75/jmaps</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Michał Szwaczko</name>
            <email>mikey@wirelabs.net</email>
            <organization>Late Night Coding</organization>
            <organizationUrl>https://github.com/mikey75</organizationUrl>
        </developer>
    </developers>


    <profiles>
        <profile>
            <id>maven-publish</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.7.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                            <checksums>required</checksums>
                        </configuration>
                    </plugin>


                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>2.2.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>2.9.1</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.4</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <repositories>
        <repository>
            <name>Central Portal Snapshots</name>
            <id>central-portal-snapshots</id>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
</project>